@@ -7,35 +7,52 @@ SET PATH="C:\Program Files\Java\jre1.8.0_441\bin"
 CLS
 
 echo.
-echo Starting Aion Version 5.8 - Game Server.
-
+echo Starting Aion Version 5.8
 echo.
 
 REM -------------------------------------
-REM Default parameters for a basic server.
-java -Xms4096m -Xmx8192m -XX:MaxHeapSize=8192m -Xdebug -XX:MaxNewSize=48m -XX:NewSize=48m -XX:+UseParNewGC -XX:+CMSParallelRemarkEnabled -XX:+UseConcMarkSweepGC -XX:-UseSplitVerifier -ea -javaagent:./libs/al-commons.jar -cp ./libs/*;./libs/AL-Game.jar com.aionemu.gameserver.GameServer
+REM Оптимальные параметры для ParallelGC
+REM  -XX:+UseParallelGC \          # Enable ParallelGC
+REM  -Xms2048m -Xmx8192m \         # Fixed size of memory allocation
+REM  -XX:+PrintGCDetails \         # Log garbage collection (for debug)
+REM  -XX:+PrintGCDateStamps \      # Add dates to GC logs
+REM  -Xloggc:gc.log \              # Save GC logs to a file
+REM  -Xms8g -Xmx8g \               # More memory if needed
+REM  -XX:MaxGCPauseMillis=200 \    # Desired maximum GC pause (ms)
+REM  -XX:GCTimeRatio=99 \          # Goal: 1% of time for GC (99% for work)
+REM  -XX:ParallelGCThreads=4 \     # Number of GC threads (default = number of CPU cores)
 REM -------------------------------------
-SET CLASSPATH=%OLDCLASSPATH%
+
+java ^
+  -Xms2048m -Xmx8192m ^
+  -XX:+UseParallelGC ^
+  -XX:+UseParallelOldGC ^
+  -XX:ParallelGCThreads=4 ^
+  -XX:MaxGCPauseMillis=200 ^
+  -XX:GCTimeRatio=99 ^
+  -XX:+DisableExplicitGC ^
+  -ea ^
+  -javaagent:./libs/al-commons.jar ^
+  -cp ./libs/*;./libs/AL-Game.jar ^
+  com.aionemu.gameserver.GameServer
+REM -------------------------------------
 
 if ERRORLEVEL 2 goto restart
 if ERRORLEVEL 1 goto error
 if ERRORLEVEL 0 goto end
 
-REM Restart...
 :restart
 echo.
 echo Administrator Restart ...
 echo.
 goto start
 
-REM Error...
 :error
 echo.
 echo Server terminated abnormaly ...
 echo.
 goto end
 
-REM End...
 :end
 echo.
 echo Server terminated ...
